Continued work on flat test page and layout.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <div id="headerWrapper">
             <div id="header">
                 <div id="siteTitle"><div class="primaryColor">Juniper</div> Lounge</div>
+                <div id="login">
+                    <a href="#">Login</a>
+                    <a class="primaryColor bold" href="#">Register</a></div>
                 <div id="nav">
                     <div class="navSection">
                         <a href="#">Home</a>
@@ -41,13 +44,21 @@
                         <a href="#">Contribute</a>
                     </div>
                 </div>
+                <div id="breadcrumbs">
+                    <a href="#">Home</a>
+                    >
+                    <a href="#">Gin List</a>
+                </div>
             </div>
             </div>
             <div id="content">
-                <h3>Test Header</h3>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-                <h3>Test Header 2</h3>
-                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+                <h2>Gin List</h2>
+                <h3>Hendrick's Gin</h3>
+                <img class="img" src="./img/hendricks.png" />
+                <p>Hendrick's uses Bulgarian rose and cucumber to add flavor. Hendrick's gin is bottled in a dark brown apothecary-style bottle. Hendrick's uses a blend of spirits produced from a Carter-Head Still (constructed in 1948), of which there are only a small number in the world, and a small pot still, originally built in 1860 by Bennett, Sons & Shears. Both have been restored to working order after being bought at auction in the 1960s by current William Grant Life President, Charles Gordon. The two stills produce strikingly different styles of gin due to their different construction and methods of distillation.</p>
+                <h3>Plymouth Gin</h3>
+                <img class="img" src="./img/plymouth.jpg" />
+                <p>Plymouth Original Strength is 41.2% alcohol by volume. It has a distinctively different, slightly less dry flavour than the much more commonly available London Dry Gin, as it contains a higher than usual proportion of root ingredients, which bring a more 'earthy' feel to the gin, as well as a smoother juniper hit. There is also a 'navy strength' variety available which is 57% alcohol by volume (100° English proof), being the traditional strength demanded by the British Royal Navy as this was the proof that would not prevent gunpowder from igniting, should it be compromised by spilled spirit.</p>
             </div>
             <div id="footer">
                 Speakeasy &copy; 2012
